# logger_cpp

./: CMakeLists.txt
include/: logger.hpp  logger.tpp
include/details/async/: thread_pool.tpp
include/details/buffers/: logmessagebuffer.tpp
include/details/file/: file_handler.tpp
include/details/messages/: log_messages.tpp
include/details/queues/: circular_queue.tpp  mpmcblocking_queue.tpp
include/version/: version.h.in
src/: logger.cc
test/: CMakeLists.txt  circular_queue_test.cc  mpmc_queue_test.cc  test.cpp  thread_pool_test.cc
